--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,29 +19,43 @@ body{
 	height: 100%;
 	width: 100%;
 }
-
+/*  Estilos para a navbar */
+.navbar{
+	position: fixed;
+	width: 1100px;
+	left: calc(50% - 550px);
+	background-color: black;
+}
+.navbar li{
+	float: right;
+	text-decoration: none;
+	display: inline-block;
+	margin-right: 50px;
+}
+.navbar a{
+	text-decoration: none;
+	font-size: 30px;
+	color: grey;
+}
+.navbar a:hover{
+	color: white;
+}
 /* Estilos para a sessão de equipes */
-#team{
+#equipe{
 	width: 100%;
 	height: 500px;
+	text-align: center;
+	padding: 50px;
 	background-color: rgba(0, 0, 0, 0.2);
 }
-#team h2{
-	text-align: center;
+#equipe h2{
 	font-size: 50px;
-	padding-bottom: 0px;
-	margin-bottom: 0px;
 }
-#team h3{
-	text-align: center;
+#equipe h3{
 	font-size: 20px;
 	color: grey;
 }
-#team p{
-	text-align: center;
-}
-.teamArticle{
-	text-align: center;
+.equipeArticle{
 	padding: 50px;
 }
 .rosto{
