--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,9 @@ body{
 }
 
 /* Estilos para a sessão de equipes */
+article{
+	margin-top: 50px;
+}
 #equipe{
 	width: 100%;
 	height: 500px;
@@ -53,10 +56,10 @@ body{
 	background-color: rgba(0, 0, 0, 0.2);
 }
 #equipe h2{
-	font-size: 50px;
+	font-size: 30px;
 }
 #equipe h3{
-	font-size: 20px;
+	font-size: 15px;
 	color: grey;
 }
 .equipeArticle{
