--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,12 +45,12 @@ body{
 }
 
 /* Estilos para a sessão de equipes */
-article{
-	margin-top: 50px;
+.sessao{
+	margin-top: 30px;
 }
 #equipe{
 	width: 100%;
-	height: 500px;
+	height: 100%;
 	text-align: center;
 	padding: 50px;
 	background-color: rgba(0, 0, 0, 0.2);
@@ -66,6 +66,7 @@ article{
 	padding: 50px;
 }
 .rosto{
+	margin-top: 50px;
 	width: 200px;
 	height: 200px;
 	border-radius: 50%;
