--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,13 @@
-/*01 - Geral*/
+/* 
+** 1.0 Geral
+** 2.0 Estilos para a navbar
+** 3.0 Estilos para o header
+** 4.0 Estilos para a sessão de equipes
+** 5.0 Estilos para a sessão sobre
+** 6.0 Estilos do footer
+*/
+
+/* 1.0 - Geral*/
 *{
 	padding: 0px;
 	margin: 0px;
@@ -12,9 +21,12 @@ body{
 	height: 100%;
 	width: 100%;
 }
+.linha{
+	clear: both;
+}
 /* Fim geral */
 
-/*02 - Estilos para a navbar */
+/* 2.0 - Estilos para a navbar */
 .menu{
 	position: fixed;
 	top: 0px;
@@ -42,7 +54,7 @@ body{
 }
 /*Fim navbar*/
 
-/* 03 - Estilos para o header */
+/* 3.0 - Estilos para o header */
 header{
 	position: relative;
 	background-image: url("../img/ic.jpg");
@@ -50,9 +62,6 @@ header{
 	background-position: bottom center;
 	width: 100%;
 	height: 700px;
-}
-.linha{
-	clear: both;
 }
 .caixaHeader{
 	position: absolute;
@@ -72,26 +81,26 @@ header{
 }
 /*  Fim estilos header */
 
-/* 04 - Estilos para a sessão de equipes */
-.sessao{
-	margin-top: 30px;
-}
-#equipe{
+/* 4.0 - Estilos para a sessão de equipes */
+#equipes{
 	width: 100%;
-	height: 100%;
+	height: 2300px;
 	text-align: center;
 	padding: 50px;
 	background-color: rgba(0, 0, 0, 0.2);
 }
-#equipe h2{
+article{
+	margin: 50px;
+	margin-bottom: 400px;
+}
+.sessao{
+	padding: 20px;
+}
+.sessao h2{
+	font-size: 70px;
+}
+.sessao h3{
 	font-size: 30px;
-}
-#equipe h3{
-	font-size: 15px;
-	color: grey;
-}
-.equipeArticle{
-	padding: 50px;
 }
 .rosto{
 	margin-top: 50px;
@@ -106,12 +115,81 @@ header{
 }
 /* Fim estilos sessão de equipes */
 
-/* 05 - Estilos para a sessão sobre */
-#servicos{
-	position: relative;
-	background-color: #cccccc;
-	height: 70%;
+/* 5.0 - Estilos para a sessão sobre */
+#aEmpresa{
+	font-family: "Spy Agency Condensed";
+	color: white;
+}
+#aEmpresa h2{
+	text-align: center;
 	width: 100%;
+	font-size: 48px;
+	background-color: black;
+}
+#aEmpresa h2, h3, p{
+	margin: 0px;
+	padding: 10px 0px;
+}
+#aEmpresa p{
+	font-size: 17px;
+}
+.pilares{
+	text-align: center;
+	color: black;
+	padding: 5px;
+	padding-bottom: 10px;
+	background-color: #0066cc;
+}
+.pilares li{
+	list-style: none;
+}
+.resumo {
+ 	color: black;
+	text-align: center;
+	padding: 15px;
+	padding-bottom: 0px;
+}
+#aEmpresa .col-md-6{
+	padding: 0px;
+}
+#aEmpresa .col-sm-12{
+	padding: 0px;
 }
 /* Fim estilos sobre */
-/* Estilos do rodape de todas as paginas */
+/* 6.0 Estilos do footer */
+#rodape{
+	width: 100%;
+	height: 600px;
+	padding: 50px;
+	background-color: rgba(0, 0, 0, 0.7);
+	color: white;
+	text-align: center;
+}
+.info{
+	text-align: left;
+}
+.col-md-6{
+	padding-right: 80px;
+	padding-left: 80px;
+}
+.btn-primary{
+	margin-top: 10px;
+	float: right;
+	width: 100%;
+}
+.logo{
+	width: 100px;
+	height: 100px;
+	margin-top: 50px;
+}
+.rights{
+	width: 100%;
+	height: 100px;
+	background-color: black;
+	text-align: center;
+	color: #cccccc;
+}
+.rights h4{
+	margin-top: 45px;
+}
+/* Fim estilos rodapé */
