--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@ body{
 	top: 0px;
 	width: 100%;
 	z-index: 1;
+	font-size: 15px;
 }
 .navbar-default{
 	border-radius: 0px;
@@ -46,11 +47,8 @@ body{
 	font-family: "Spy Agency Condensed";
 	color: grey;
 }
-.navbar a:visited{5
+.navbar a:visited{
 	color: black;
-}
-.navbar a:hover{
-	color: white;
 }
 .navbar-brand{
 	padding-top: 10px;
@@ -61,7 +59,7 @@ body{
 header{
 	position: relative;
 	background-image: url("../img/ic.jpg");
-	background-repeat: no-repeat;
+	background-size: cover;
 	background-position: bottom center;
 	width: 100%;
 	height: 700px;
