--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,6 @@ body{
 	position: relative;
 	height: 100%;
 	width: 100%;
-	font-family: 'Roboto', sans-serif;
 }
 .linha{
 	clear: both;
@@ -86,7 +85,7 @@ header{
 /* 4.0 - Estilos para a sessão de equipes */
 #equipes{
 	width: 100%;
-	height: 2300px;
+	/*height: 2300px;*/
 	text-align: center;
 	padding: 50px;
 	background-color: rgba(0, 0, 0, 0.2);
@@ -110,7 +109,6 @@ article{
 	height: 200px;
 	border-radius: 50%;
 	border: 10px solid white;
-	border-style: ;
 	-webkit-border-radius: 150px;
 	-moz-border-radius: 150px;
 	background-color: black;
@@ -119,7 +117,7 @@ article{
 
 /* 5.0 - Estilos para a sessão sobre */
 #aEmpresa, #estrutura{
-	/*font-family: "Spy Agency Condensed";*/
+	font-family: "Spy Agency Condensed";
 	color: white;
 }
 #aEmpresa h2, #estrutura h2{
@@ -192,11 +190,12 @@ article{
 }
 /* Fim estilos sobre */
 /* 6.0 Estilos do footer */
-#rodape{
+footer{
 	width: 100%;
-	height: 600px;
-	padding: 50px;
 	background-color: rgba(0, 0, 0, 0.7);
+}
+#rodape{
+	padding: 50px;
 	color: white;
 	text-align: center;
 }
